@@ -20,6 +20,7 @@
     - Solved feature request #767: New subdatabase based on AUX file (biblatex)
     - Fixes GH Bug #173: Personal journal abbreviation list is not loaded twice
     - Bugfix: Preview of external journal abbreviation list now displays the correct list
+    - Feature: DOItoBibTeX fetcher now also handles HTTP URLs
 [dev_2.11]
     - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
 2.11 beta 4
